<resources>
    <string name="app_name">Discovery Time</string>
    <string name="google_app_id">com.nanodegree.shevchenko.discoverytime</string>

    <!-- Tab names for trip lists -->
    <string name="upcoming">Upcoming</string>
    <string name="wish_list">Wish list</string>
    <string name="past">Past</string>

    <!-- Titles on trip add/edit dialog -->
    <string name="new_trip_header">Add new trip</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="end_date">Select end date</string>
    <string name="start_date">Select start date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title">Set title</string>
    <string name="destination">Choose destination</string>

    <!-- User error messages -->
    <string name="destination_empty">Destination is not set</string>
    <string name="title_empty">Title can\'t be empty</string>
    <string name="one_date_set">Both or no dates must be selected</string>
    <string name="start_after_end">Start date can\'t be later then end date</string>

    <!-- Trip details activity -->
    <string name="show_on_map">Show on map</string>
    <string name="edit_trip">Edit trip</string>
    <string name="delete_trip">Delete trip</string>
    <string name="not_planned_header">Not planned yet</string>
    <string name="day_number">Day %d</string>
    <string name="place_delete_confirm">Remove %s from the trip?</string>
    <string name="place_deleted">%s was deleted</string>

    <!-- Snackbars to undo trip deletion -->
    <string name="trip_deleted">Trip \"%s\" was deleted</string>
    <string name="undo">UNDO</string>
    <string name="trip_restored">Trip \"%s\" restored</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="day_and_date_tmpl" formatted="false">Day %d - %s</string>
    <string name="from_to_tmpl" formatted="false">%s - %s</string>
    <string name="no_trips">Let\'s start discover!</string>
    <string name="no_places">Let\'s add places to your trip!</string>
    <string name="logo_description">Discovery Time!</string>
    <string name="no_upcoming_trips">No upcoming trips!</string>
    <string name="dest_image_description">Picture of your destination</string>
    <string name="add_note_hint">Add note</string>
</resources>
