<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--TODO Add share button-->
    <item
        android:id="@+id/action_show_on_map"
        app:showAsAction="always"
        android:icon="@drawable/ic_map_white_24dp"
        android:title="@string/show_on_map" />

    <item
        android:id="@+id/action_add_place"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_location_white_24dp"
        android:title="@string/add_place" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/edit_trip"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete_trip"
        app:showAsAction="ifRoom" />
</menu>